src/test/ui/feature-gate/issue-43106-gating-of-unstable.stderr
error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:17:1
   |
LL | #![unstable                   = "1200"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:20:1
   |
LL | #[unstable = "1200"]
   | ^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:23:17
   |
LL |     mod inner { #![unstable="1200"] }
   |                 ^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:26:5
   |
LL |     #[unstable = "1200"] fn f() { }
   |     ^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:29:5
   |
LL |     #[unstable = "1200"] struct S;
   |     ^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:32:5
   |
LL |     #[unstable = "1200"] type T = S;
   |     ^^^^^^^^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:35:5
   |
LL |     #[unstable = "1200"] impl S { }
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

